Apply suggestions from code review

--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -14,7 +14,7 @@ You're just getting started with GraphQL. You're learning about syntax, running 
 
 <Tip>
 
-Also check out [this Apollo blog post](https://www.apollographql.com/blog/graphql/basics/what-is-graphql-introduction/).
+Check out [graphql.com](https://graphql.com/learn/) to learn more about the basics of GraphQL.
 
 </Tip>
 
