--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -72,7 +72,7 @@ These features (along with many others) are available to organizations on Apollo
 
 <Tip>
 
-Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials)!
+Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials).
 
 </Tip>
 
