--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -7,7 +7,7 @@ After you [create a supergraph](./cloud/) with GraphOS Studio, read below to lea
 
 <Note>
 
-For the most part, you can perform these next steps in any order. But you should definitely start by [installing the Rover CLI](#first-install-the-rover-cli).
+You should always start by  [installing the Rover CLI](#first-install-the-rover-cli). Otherwise, you can perform the steps described on this page in any order.
 
 </Note>
 
