--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -102,11 +102,11 @@ If you don't see the **Query Plan Preview** option, make sure you're using the f
 
 As you edit an operation, the Explorer recalculates its example query plan accordingly.
 
-<Caution>
+<Note>
 
 ** The Explorer might not use the exact same query planning logic as your router!** The example query plan helps you reason about your operations, but it is _not_ intended as a source of truth.
 
-</Caution>
+</Note>
 
 There are two display modes for query plans. You can switch between **Show plan as text** and **Show plan as chart** by clicking the icons next to **Query Plan Preview**:
 
@@ -199,7 +199,7 @@ Set **Default Headers** from the Explorer's Settings tab.
 
 <Caution>
 
-**WARNING:** Do not use **default headers** to provide sensitive information, such as an access token. Instead, use [environment variables](./connecting-authenticating/#environment-variables)
+Do not use **default headers** to provide sensitive information, such as an access token. Instead, use [environment variables](./connecting-authenticating/#environment-variables)
 
 </Caution>
 
