--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -102,11 +102,11 @@ After you add multiple operations to a collection, you can **drag and drop** to 
 
 ## Modifying collections and operations
 
-<Caution>
+<Note>
 
 Non-admin organization members _can't_ edit another team member's shared collection, _unless_ that team member specifically configures the collection to allow this.
 
-</Caution>
+</Note>
 
 **To edit a collection's details,** click the **•••** button next to its entry in the list and select **Configure**.
 
