--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -15,13 +15,17 @@ The interface for requesting an export of auditable events is available under th
 
 <Note>
 
-> Audit log data is available from July 2021 onward.
+Audit log data is available from July 2021 onward.
 
 </Note>
 
 ## Creating an audit log export
 
-> Only [Organization Admins](./members/#organization-wide-member-roles) can request audit exports.
+<Note>
+
+Only [Organization Admins](./members/#organization-wide-member-roles) can request audit exports.
+
+</Note>
 
 When creating an audit log export, you specify a **time range**, along with optional filters to limit actions to a particular **user** or **graph**. The maximum time range that you can request audits for is 180 days, as definied by our retention policy.
 
