Remove remaining blockquotes and unnecessary newlines

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -31,7 +31,7 @@ flowchart LR;
     colorScheme="indigo"
     href="/graphos/quickstart/cloud/"
     style={{
-      marginRight: "10px",
+      marginRight: '10px'
     }}
   >
     Create your first supergraph!
@@ -47,13 +47,7 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 ### Core features
 
-These features (along with many others) are available to organizations on Apollo **Serverless** and **Dedicated** plans:
-
-<Tip>
-
-[See all Apollo plans.](https://www.apollographql.com/pricing/)
-
-</Tip>
+These features (along with many others) are available to organizations on Apollo [**Serverless** and **Dedicated** plans](https://www.apollographql.com/pricing/):
 
 - [**Cloud routing.**](./routing/cloud/)
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
@@ -102,7 +96,7 @@ An Enterprise plan also provides access to our Graph Champions community and a d
   colorScheme="indigo"
   href="/graphos/quickstart/cloud/"
   style={{
-    marginRight: "10px",
+    marginRight: '10px'
   }}
 >
   Get started with GraphOS!
