--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -163,7 +163,7 @@ That's because we aren't currently providing a **supergraph schema** to the rout
 ## 4. Obtain your subgraph schemas
 
 
-<blockquote>
+<Note>
 
 
 This quickstart uses two Apollo-hosted subgraphs (named `locations` and `reviews`) from an imaginary space tourism application called FlyBy. Here are their URLs and schemas for reference:
@@ -258,7 +258,7 @@ type SubmitReviewResponse {
 
 If you have your own existing subgraphs that you want to use instead of these examples, feel free! Provide their names and URLs wherever you see the example subgraphs used in the steps below.
 
-</blockquote>
+</Note>
 
 To compose a supergraph schema for our router, GraphOS needs the following information about each of our **subgraphs**:
 
