--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -2,20 +2,24 @@
 title: Setting up Apollo SSO with a SAML-based IdP
 ---
 
-<EnterpriseFeature
-  text={`**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).`}
-/>
+<EnterpriseFeature>
+
+**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
+
+Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+
+</EnterpriseFeature>
 
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo single sign-on (SSO). These steps require administrative access to your IdP.
 
-<blockquote>
+<Note>
 
 **If you use Okta or Azure Active Directory as your identity provider**, instead see the corresponding guide for your tool:
 
 - [Okta](./okta-integration-guide/)
 - [Azure AD](./azure-ad-integration-guide/)
 
-</blockquote>
+</Note>
 
 1. Create a new application in your SSO environment. While doing so, set the following values:
 
