--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -3,13 +3,15 @@ title: GraphQL subscriptions with a cloud supergraph
 description: Real-time data delivery from across your services
 ---
 
-<blockquote>
+
+<PreviewFeature >
 
 **Cloud supergraph support for GraphQL subscriptions is currently in [preview](/resources/product-launch-stages#preview).**
 
 You can also use subscriptions with an Enterprise self-hosted supergraph. See the [Apollo Router documentation](/router/executing-operations/subscription-support/).
 
-</blockquote>
+</PreviewFeature>
+
 
 Cloud supergraphs provide preview support for GraphQL subscription operations:
 
@@ -205,14 +207,12 @@ subscription {
 }
 ```
 
-<blockquote>
-
-**Note the following:**
+<Note>
 
 - This operation _adds_ the `Product.id` field. The router needs `@key` fields of the `Product` entity to merge entity fields from across subgraphs.
 - This operation _removes_ all fields defined in the Reviews subgraph, because the Products subgraph can't resolve them.
 
-</blockquote>
+</Note>
 
 At any point after the subscription is initiated, the Products subgraph might send updated data to our router. Whenever this happens, the router _does not_ immediately return this data to the client, because it's missing requested fields from the Reviews subgraph!
 
