--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -66,7 +66,11 @@ To add operations to a collection:
      width="350"
    />
 
-   > If you define _multiple_ operations in a single editor, _all_ of those operations are saved together as a single entry in a collection.
+   <Note>
+
+   If you define _multiple_ operations in a single editor, _all_ of those operations are saved together as a single entry in a collection.
+
+   </Note>
 
 2. Click the "floppy disk" button (shown in the screenshot above) to open the save dialog:
 
@@ -79,7 +83,11 @@ To add operations to a collection:
 
 3. Provide a name for the collection entry, then use the dropdown menu to select a collection to add it to.
 
-   > If you don't see the collection you want, make sure you've selected the correct graph/variant combination in the Explorer.
+   <Note>
+
+   If you don't see the collection you want, make sure you've selected the correct graph/variant combination in the Explorer.
+
+   </Note>
 
 4. Click **Save**.
 
