--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -105,7 +105,11 @@ The **Create SAML Integration** dialog includes multiple steps:
      - Also check **Use this for Recipient URL and Destination URL**.
    - **Audience URI (SP Entity ID)**: `PingConnect`
 
-     > ⚠️ If `PingConnect` already exists, use `fd76e619-6c0a-461c-912d-418278929d60`
+     <Note>
+
+     If `PingConnect` already exists, use `fd76e619-6c0a-461c-912d-418278929d60`
+
+     </Note>
 
    - **Default RelayState**: `https://pingone.com/1.0/fd76e619-6c0a-461c-912d-418278929d60`
 
