--- a/src/content/basics/devtools/cli.mdx
+++ b/src/content/basics/devtools/cli.mdx
@@ -56,7 +56,11 @@ Most of the Apollo CLI's commands are in the following namespaces:
 
 For a full list of commands in a particular namespace, use the `apollo help` command:
 
-> Omit `npx` from the example commands below if you [installed the Apollo CLI globally](#global-installation).
+<Note>
+
+Omit `npx` from the example commands below if you [installed the Apollo CLI globally](#global-installation).
+
+</Note>
 
 ```
 $ npx apollo help client
