--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -4,14 +4,20 @@ description: Download a log of all material events that have occured in your org
 ---
 
 <EnterpriseFeature
-text={`**This feature is available only with an [Enterprise plan](https://www.apollographql.com/pricing/).** If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](./plans/#enterprise-trials).`}
+  text={
+    "**This feature is available only with an [Enterprise plan](https://www.apollographql.com/pricing/).** If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](./plans/#enterprise-trials)."
+  }
 />
 
 Organizations with a GraphOS [Enterprise plan](http://apollographql.com/pricing) can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
 
 The interface for requesting an export of auditable events is available under the **Audit** tab of your organization's homepage in GraphOS Studio:
 
-<img src="https://user-images.githubusercontent.com/5922187/127679934-e862077a-0ce0-4e3a-89db-ad9e621111ff.png" class="screenshot" alt="GraphOS Studio audit log" />
+<img
+  src="https://user-images.githubusercontent.com/5922187/127679934-e862077a-0ce0-4e3a-89db-ad9e621111ff.png"
+  className="screenshot"
+  alt="GraphOS Studio audit log"
+/>
 
 <Note>
 
@@ -29,9 +35,18 @@ Only [Organization Admins](./members/#organization-wide-member-roles) can reques
 
 When creating an audit log export, you specify a **time range**, along with optional filters to limit actions to a particular **user** or **graph**. The maximum time range that you can request audits for is 180 days, as definied by our retention policy.
 
-<img src="../img/audit-log-create.jpg" class="screenshot" alt="GraphOS Studio Audit Log" width="400" />
+<img
+  src="../img/audit-log-create.jpg"
+  className="screenshot"
+  alt="GraphOS Studio Audit Log"
+  width="400"
+/>
 
-> If you need to export a log with more complex filters and against archives, please email **support@apollographql.com**.
+<Note>
+
+If you need to export a log with more complex filters and against archives, please email **support@apollographql.com**.
+
+</Note>
 
 Exports sometimes take a few minutes to process. When an export is ready, Studio emails you a link to its CSV file, and you can also find that link in the audit exports table. Audit export files are available to download for 30 days.
 
@@ -76,7 +91,11 @@ An audit log's **Resource_Type** column indicates what type of resource each act
 
 The **Action** column of an audit log indicates the type of each action that was performed. Possible values are listed below.
 
-> If your audit log includes an action type that is _not_ listed below and you have questions about it, please contact **support@apollographql.com**.
+<Note>
+
+If your audit log includes an action type that is _not_ listed below and you have questions about it, please contact **support@apollographql.com**.
+
+</Note>
 
 ### Generic actions
 
