Remove redundant language

--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -111,7 +111,7 @@ You can configure Apollo Server 4 to provide _additional_ error details (such as
 
 <Note>
 
-Note that Apollo Server versions 2 and 3 are [deprecated](/apollo-server/previous-versions/).
+Apollo Server versions 2 and 3 are [deprecated](/apollo-server/previous-versions/).
 
 </Note>
 
