Correct SSO enterprise callouts

--- a/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
+++ b/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
@@ -2,9 +2,13 @@
 title: Setting up Apollo SSO with Azure AD
 ---
 
-<EnterpriseFeature
-  text={`**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).`}
-/>
+<EnterpriseFeature>
+
+**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
+
+Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+
+</EnterpriseFeature>
 
 This guide walks through configuring Azure Active Directory (Azure AD) as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
 
