--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -152,9 +152,11 @@ Even if your API currently uses only _one_ GraphQL server, a cloud supergraph he
 
 ### Self-hosted supergraphs
 
-<EnterpriseFeature
-  text={`**Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements. If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).`}
-/>
+<EnterpriseFeature>
+
+**Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements. If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
+</EnterpriseFeature>
 
 With a self-hosted supergraph, GraphOS does _not_ provision a router for your supergraph. Instead, you host your supergraph's router in your own infrastructure:
 
@@ -189,11 +191,11 @@ Self-hosted supergraphs provide full control over your router, but they also req
 
 ### Monographs
 
-<EnterpriseFeature
-  text={
-    "Monographs require an Apollo organization on the **Enterprise** plan. [Learn more about plans.](../org/plans/)"
-  }
-/>
+<EnterpriseFeature>
+
+Monographs require an Apollo organization on the **Enterprise** plan. [Learn more about plans.](../org/plans/)
+
+</EnterpriseFeature>
 
 A **monograph** is a graph that consists of a single GraphQL server with _no_ router:
 
