--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -4,11 +4,11 @@ id: TN0016
 tags: [router, kubernetes]
 ---
 
-<EnterpriseFeature
-  text={
-    "Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more."
-  }
-/>
+<EnterpriseFeature>
+
+Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
+
+</EnterpriseFeature>
 
 Determining the correct resource requests and limits for your application pods in a Kubernetes system is not an exact science. Your specific needs depend on many factors, including:
 
@@ -22,10 +22,10 @@ Our general recommendation for Kubernetes is to start with these requests and li
 ```yaml
 resources:
   requests:
-    memory: "1G"
-    cpu: "1000m"
+    memory: '1G'
+    cpu: '1000m'
   limits:
-    memory: "2G"
+    memory: '2G'
     # no CPU limit to avoid throttling
 ```
 
